# adw

./: .gitignore  BACKLOG.md  LICENSE  README.md  adw.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.html
examples/: README.md  scaffold.py
examples/bug/: adw.yaml  example.json  search.py  test_search.py
examples/chore/: example.json  test_greet.py
examples/cve/: example.json  fileserver.py  secret.txt  test_fileserver.py
examples/feature/: adw.yaml  example.json
examples/hotfix/: adw.yaml  cart.py  example.json  test_cart.py
examples/hotfix/experts/: hotfix-surgeon.md
src/adw/: __init__.py  __main__.py  cli.py  config.py  exec_env.py  human.py  limits.py  model_router.py  notify.py  registry.py  routing.py  scaffold.py
src/adw/adapters/: __init__.py  base.py  claude_code.py  codex.py  mock.py  opencode.py
src/adw/nodes/: agent_node.py  code_node.py  git_ops.py
src/adw/prompts/: __init__.py  bug_diagnose.md  bug_fix.md  build.md  chore_build.md  cve_mitigate.md  cve_reproduce.md  cve_research.md  cve_review.md  fix.md  fusion.md  fusion_build.md  hotfix_build.md  hotfix_scout.md  opinion.md  plan.md  review.md  revise.md  router.md  scout.md  validate_gate.md
src/adw/queue/: tickets.py
src/adw/sandbox/: Dockerfile
src/adw/state/: run_state.py
src/adw/ui/: __init__.py  limits.py  runner.py  server.py  views.py
src/adw/workflows/: __init__.py  base.py  bug.py  chore.py  cve.py  feature.py  fusion.py  hotfix.py  (+1 more)
tests/: conftest.py  test_adapters.py  test_async_resume.py  test_budget.py  test_cancel.py  test_config.py  test_exec_env.py  test_experts.py  test_gates.py  test_git_ops.py  test_init.py  test_isolation.py  test_land.py  test_land_cli.py  test_limits.py  test_logs.py  test_model_router.py  test_notify.py  test_queue_list.py  test_queue_watch.py  test_registry.py  test_retry.py  test_route_json.py  test_routing.py  test_smoke_e2e.py  test_state.py  test_status.py  test_steps.py  test_tickets.py  test_ui.py  test_ui_cli.py  test_workflow_feature.py  test_workflow_fusion.py  test_workflows.py  test_workflows_extra.py
tests/fixtures/: fake_agent.py
(+18 files in other folders)
